--- a/css/loccs.css
+++ b/css/loccs.css
@@ -28,6 +28,24 @@ input {
     font-size: 14px;
 }
 
+#provider {
+    position: absolute;
+    top: 160px;
+    left: 588px;
+    font-weight: bold;
+    font-size: 14px;
+    min-width: 300px;
+}
+
+#project {
+    position: absolute;
+    top: 185px;
+    left: 588px;
+    font-weight: bold;
+    font-size: 14px;
+    min-width: 300px;
+}
+
 #amount-inputs {
     position: absolute;
     top: 357px;
